# SuiteSparse

./: .gitignore
COLAMD/Include/: colamd.h
COLAMD/MATLAB/: colamdmex.c  symamdmex.c
COLAMD/Source/: colamd.c
CSparse/Include/: cs.h
CSparse/Source/: cs_add.c  cs_dfs.c  cs_lsolve.c  cs_ltsolve.c  cs_multiply.c  cs_reach.c  cs_scatter.c  cs_spsolve.c
CXSparse/Include/: cs.h
CXSparse/Source/: cs_gaxpy.c
UMFPACK/: CMakeLists.txt
UMFPACK/Lib/: link.sh  test.sh
UMFPACK/Source/: test.cpp  test.h
